Ret 5498 (#2705)
* Updates for checking representative address before assigning default organisation address that is requested from IDAM. If address is empty it updates, if not, it doesn't update.

* Updates for checking representative address before assigning default organisation address that is requested from IDAM. If address is empty it updates, if not, it doesn't update.

* Updates for checking representative address before assigning default organisation address that is requested from IDAM. If address is empty it updates, if not, it doesn't update.

* Updates for checking representative address before assigning default organisation address that is requested from IDAM. If address is empty it updates, if not, it doesn't update.

* Updates for checking representative address before assigning default organisation address that is requested from IDAM. If address is empty it updates, if not, it doesn't update.